Prototyping `get_production_function`

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,15 +22,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So I need to have a dictionary to keep track of the units for the different models."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "annual_samples = 48                  # 4 samples per month\n",
-    "sample_times = arange(-360.0, 790.0)  # Times at which to collect samples\n",
-    "growth_bools = array([0.0, 0.0, 0.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0, 0.0, 0.0])\n",
-    "params = array([1.0, 1.25, 772.0, 775.0, 40.0])"
+    "model_units = { # This dictionary contains the units for the fluxes and production function\n",
+    "    \"Guttler14\": {  # Units of the Guttler 2014 paper\n",
+    "        \"production_rate_units\": \"atoms/cm^2/s\",    # Units of the production rate \n",
+    "        \"flow_rate_units\": \"Gt/yr\"                  # Units of the fluxes\n",
+    "    },\n",
+    "    \"Brehm21\": {    # Units used by the Brehm, et. al. paper\n",
+    "        \"production_rate_units\": \"\",    # Units of the production rate \n",
+    "        \"flow_rate_units\": \"\"           # Units of the fluxes\n",
+    "    },\n",
+    "    \"Buntgen18\": {  # The units used by the Buntgen 2018 paper\n",
+    "        \"production_rate_units\": \"\",    # Units of the production function\n",
+    "        \"flow_rate_units\": \"\"           # Units of the fluxes \n",
+    "    },\n",
+    "    \"Miyake17\": {   # The units used by the Miyake 2017 et. al. paper\n",
+    "        \"production_rate_units\": \"\",    # Units of the production function \n",
+    "        \"flow_rate_units\": \"\"           # Units of the fluxes.\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function below will also have a `shape` parameter eventually. First however I want to get this running. Damn this really is well suited to a class structure since then I can set `self.set_annual_samples()` need to check if this has actually been implemented. The answer is __No__. I need to add the growth seasons to the `model_units` (which I might just rename `models`). This will lead to ?two? extra field `hemisphere_model` (bool) and `growth_seasons`. Alternatively this could result in a further nested dictionary like `hemispheres = {\"NH_growth\": array([]), \"SH_growth\": array([])}`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_production_function(model: str, data: str):\n",
+    "    annual_samples = 48                     # 4 samples per month\n",
+    "    sample_times = arange(-360.0, 790.0)    # Times at which to collect samples\n",
+    "    growth_bools = array([                  # Boolean mask for the months of the growth season\n",
+    "        0.0, 0.0, 0.0, 1.0, 1.0, 1.0,       # Jan, Feb, Mar, Apr, May, Jun\n",
+    "        1.0, 1.0, 1.0, 0.0, 0.0, 0.0        # Jul, Aug, Sep, Oct, Nov, Dec\n",
+    "    ])\n",
+    "    params = array([    # An array containing the intial parameters of the production funtion \n",
+    "        1.0, 1.25, 772.0, 775.0, 40.0\n",
+    "    ])\n",
+    "\n",
+    "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
+    "        model,  # Name of the model as looped from the models dictionary \n",
+    "        production_rate_units=model_units[model][\"production_rate_units\"], \n",
+    "        flow_rate_units=model_units[model][\"flow_rate_units\"]\n",
+    "    )\n",
+    "    cbm.compile()   # Generating the transfer operator via the compile() command \n",
+    "\n",
+    "    mcmc_model = ticktack.fitting.SingleFitter(cbm)     # Fitting a model \n",
+    "    mcmc_model.load_data(data)                          # Loading the data into the model \n",
+    "    mcmc_model.prepare_function(model=\"simple_sinusoid\")# Generating the simple sin model \n",
+    "\n",
+    "    sampler = mcmc_model.MarkovChainSampler(\n",
+    "        params, # Initial position within the parameters space    \n",
+    "        likelihood=mcmc_model.log_likelihood,   # likelihood function \n",
+    "    )\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_production_function(\"Guttler14\")"
    ]
   },
   {
@@ -38,10 +110,7 @@
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cbm = ticktack.load_presaved_model(\"Guttler14\", production_rate_units=\"atoms/cm^2/s\")\n",
-    "cbm.compile()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -59,26 +128,6 @@
    "metadata": {},
    "source": [
     "So below is where I minimize the $\\chi^{2}$ statistic using an ODE integration style approach."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_times = arange(-360.0, 810.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mcmc_model = ticktack.fitting.SingleFitter(cbm)\n",
-    "mcmc_model.load_data(\"Miyake12.csv\")\n",
-    "mcmc_model.prepare_function(model=prod)"
    ]
   },
   {
