--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -68,15 +68,7 @@
    "outputs": [],
    "source": [
     "def get_production_function(model: str, data: str):\n",
-    "    annual_samples = 48                     # 4 samples per month\n",
-    "    sample_times = arange(-360.0, 790.0)    # Times at which to collect samples\n",
-    "    growth_bools = array([                  # Boolean mask for the months of the growth season\n",
-    "        0.0, 0.0, 0.0, 1.0, 1.0, 1.0,       # Jan, Feb, Mar, Apr, May, Jun\n",
-    "        1.0, 1.0, 1.0, 0.0, 0.0, 0.0        # Jul, Aug, Sep, Oct, Nov, Dec\n",
-    "    ])\n",
-    "    params = array([    # An array containing the intial parameters of the production funtion \n",
-    "        1.0, 1.25, 772.0, 775.0, 40.0\n",
-    "    ])\n",
+    "    params = array([1.0, 1.25, 772.0, 775.0, 40.0]) # An array containing the intial parameters of the production funtion #? This needs major work.\n",
     "\n",
     "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
     "        model,  # Name of the model as looped from the models dictionary \n",
@@ -85,6 +77,7 @@
     "    )\n",
     "    cbm.compile()   # Generating the transfer operator via the compile() command \n",
     "\n",
+    "    #? Need to double check that this will work\n",
     "    mcmc_model = ticktack.fitting.SingleFitter(cbm)     # Fitting a model \n",
     "    mcmc_model.load_data(data)                          # Loading the data into the model \n",
     "    mcmc_model.prepare_function(model=\"simple_sinusoid\")# Generating the simple sin model \n",
@@ -93,6 +86,7 @@
     "        params, # Initial position within the parameters space    \n",
     "        likelihood=mcmc_model.log_likelihood,   # likelihood function \n",
     "    )\n",
+    "    \n",
     "    "
    ]
   },
