--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ticktack\n",
-    "import pandas\n",
-    "from jax.numpy import arange, sin, pi, array, greater, less, equal, where, mean\n",
-    "from jax import jacrev, grad\n",
-    "from scipy.optimize import minimize\n",
+    "from jax.numpy import array, pi, exp, sin\n",
+    "from chainconsumer import ChainConsumer\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -30,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_production_function(model: str, data: str):\n",
-    "    params = array([1.0, 1.25, 772.0, 775.0, 40.0]) # An array containing the intial parameters of the production funtion #? This needs major work.\n",
+    "    params = array([775., 1./12, pi/2., 81./12]) # An array containing the intial parameters of the production funtion #? This needs major work.\n",
     "\n",
     "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
     "        model,  # Name of the model as looped from the models dictionary \n",
@@ -86,70 +84,63 @@
     "        params, # Initial position within the parameters space    \n",
     "        likelihood=mcmc_model.log_likelihood,   # likelihood function \n",
     "    )\n",
-    "    \n",
+    "\n",
+    "    labels = [\"Start Date (yr)\", \"Duration (yr)\", \"$\\phi$ (yr)\", \"Area\"]# Parameters of the model\n",
+    "    ChainConsumer().add_chain(sampler, walkers=20, parameters=labels)   # Sampling the distriubtion\n",
+    "\n",
+    "    def production(t):\n",
+    "        \"\"\"\n",
+    "        The best fit production function as estimated using `mcmc`\n",
+    "        \"\"\"\n",
+    "        middle = truth[0] + truth[1] / 2.0\n",
+    "        height = truth[3] / truth[1]\n",
+    "        gauss = height * exp(- ((t - middle) / (1. / 1.93516 * truth[1])) ** 16.)\n",
+    "        sine = mcmc_model.steady_state_production + \\\n",
+    "            0.18 * mcmc_model.steady_state_production * \\\n",
+    "                sin(2 * pi / 11 * t + truth[2])\n",
+    "        return sine + gauss\n",
+    "\n",
+    "    return production\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_production_function(\"Guttler14\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running burn-in...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 500/500 [00:59<00:00,  8.35it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running production...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 65%|██████▍   | 647/1000 [01:20<00:41,  8.60it/s]"
+     ]
+    }
+   ],
    "source": [
-    "miyake = pandas.read_csv(\"Miyake12.csv\", sep=\" \")   # Reading the data from the Miyake 2012\n",
-    "DC14 = array([*miyake.d14c])                        # JAX array for manipulation\n",
-    "SDC14 = array([*miyake.sig_d14c])                   # JAx array for manipulation "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So below is where I minimize the $\\chi^{2}$ statistic using an ODE integration style approach."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sampler = mcmc_model.MarkovChainSampler(params, likelihood = mcmc_model.log_likelihood)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = [\"Amplitude ($atoms/cm^2/s$)\", \"Phase (yr)\", \"Start Date (yr)\", \"End Date (yr)\", \"Height ($atoms/cm^2/s$)\"]\n",
-    "fig = mcmc_model.chain_summary(sampler, 20, labels=labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mcmc_model.plot_recovery(sampler, 20)"
+    "get_production_function(\"Guttler14\", \"Miyake12.csv\")"
    ]
   },
   {
