Adding a docstring for `get_production_function`

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -61,11 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_production_function(model: str, data: str):\n",
+    "    \"\"\"\n",
+    "    Parameters:\n",
+    "        model: `str` - The `CarbonBoxModel` that is to be used\n",
+    "        data: `str` - The dataset that the production function is to be fitted to (.csv)\n",
+    "    Returns:\n",
+    "        production: `function` - The ideal production function \n",
+    "    \"\"\"\n",
     "    params = array([775., 1./12, pi/2., 81./12]) # An array containing the intial parameters of the production funtion #? This needs major work.\n",
     "\n",
     "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:59<00:00,  8.35it/s]\n"
+      "100%|██████████| 500/500 [00:57<00:00,  8.71it/s]\n"
      ]
     },
     {
@@ -135,12 +142,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 65%|██████▍   | 647/1000 [01:20<00:41,  8.60it/s]"
+      " 61%|██████    | 611/1000 [01:05<00:45,  8.64it/s]"
      ]
     }
    ],
    "source": [
-    "get_production_function(\"Guttler14\", \"Miyake12.csv\")"
+    "guttler_production = get_production_function(\"Guttler14\", \"Miyake12.csv\")"
    ]
   },
   {
