Failed testing of 'get_production_function` lead to restructure

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,60 +92,69 @@
     "        likelihood=mcmc_model.log_likelihood,   # likelihood function \n",
     "    )\n",
     "\n",
+    "    #? So I need to do some editting on this section. \n",
+    "    #? I also need to do some profiling and see if I can't speed things up to fuel my ambition.\n",
+    "\n",
     "    labels = [\"Start Date (yr)\", \"Duration (yr)\", \"$\\phi$ (yr)\", \"Area\"]# Parameters of the model\n",
-    "    ChainConsumer().add_chain(sampler, walkers=20, parameters=labels)   # Sampling the distriubtion\n",
+    "    c = ChainConsumer().add_chain(sampler, walkers=20, parameters=labels)   # Running samples\n",
     "\n",
-    "    def production(t):\n",
-    "        \"\"\"\n",
-    "        The best fit production function as estimated using `mcmc`\n",
-    "        \"\"\"\n",
-    "        middle = truth[0] + truth[1] / 2.0\n",
-    "        height = truth[3] / truth[1]\n",
-    "        gauss = height * exp(- ((t - middle) / (1. / 1.93516 * truth[1])) ** 16.)\n",
-    "        sine = mcmc_model.steady_state_production + \\\n",
-    "            0.18 * mcmc_model.steady_state_production * \\\n",
-    "                sin(2 * pi / 11 * t + truth[2])\n",
-    "        return sine + gauss\n",
-    "\n",
-    "    return production\n",
-    "\n",
-    "    "
+    "    for parameter in labels:\n",
+    "        c.analysis.get_parameter_summary_max(*c.get_mcmc_chains(), parameter=parameter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def production(t):\n",
+    "    \"\"\"\n",
+    "    The best fit production function as estimated using `mcmc`\n",
+    "    \"\"\"\n",
+    "    middle = truth[0] + truth[1] / 2.0\n",
+    "    height = truth[3] / truth[1]\n",
+    "    gauss = height * exp(- ((t - middle) / (1. / 1.93516 * truth[1])) ** 16.)\n",
+    "    sine = mcmc_model.steady_state_production + \\\n",
+    "        0.18 * mcmc_model.steady_state_production * \\\n",
+    "            sin(2 * pi / 11 * t + truth[2])\n",
+    "    return sine + gauss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are getting some inefficiency by loading the data twice. I may look into avoiding the use of the `SingleFitter` to get around this but it is not ideal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running burn-in...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 500/500 [00:57<00:00,  8.71it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running production...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 61%|██████    | 611/1000 [01:05<00:45,  8.64it/s]"
+     "ename": "NameError",
+     "evalue": "name 'function' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-cf07875030f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mget_residual_distribution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproduction\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfunction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'function' is not defined"
      ]
     }
    ],
+   "source": [
+    "def get_residual_distribution(production, data):\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "guttler_production = get_production_function(\"Guttler14\", \"Miyake12.csv\")"
    ]
