Major redrafting of statistical information

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ticktack\n",
-    "from jax.numpy import array, pi, exp, sin\n",
-    "from chainconsumer import ChainConsumer\n",
+    "from jax.numpy import array, pi, exp, sin, mean, median, var\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,8 +72,6 @@
     "    Returns:\n",
     "        production: `function` - The ideal production function \n",
     "    \"\"\"\n",
-    "    params = array([775., 1./12, pi/2., 81./12]) # An array containing the intial parameters of the production funtion #? This needs major work.\n",
-    "\n",
     "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
     "        model,  # Name of the model as looped from the models dictionary \n",
     "        production_rate_units=model_units[model][\"production_rate_units\"], \n",
@@ -82,24 +79,32 @@
     "    )\n",
     "    cbm.compile()   # Generating the transfer operator via the compile() command \n",
     "\n",
-    "    #? Need to double check that this will work\n",
     "    mcmc_model = ticktack.fitting.SingleFitter(cbm)     # Fitting a model \n",
     "    mcmc_model.load_data(data)                          # Loading the data into the model \n",
     "    mcmc_model.prepare_function(model=\"simple_sinusoid\")# Generating the simple sin model \n",
     "\n",
-    "    sampler = mcmc_model.MarkovChainSampler(\n",
-    "        params, # Initial position within the parameters space    \n",
+    "    samples = mcmc_model.MarkovChainSampler(    # An array of samples for all of the parameters\n",
+    "        array([775., 1./12, pi/2., 81./12]),    # Initial position within the parameters space    \n",
     "        likelihood=mcmc_model.log_likelihood,   # likelihood function \n",
+    "        burnin=200,                             # Truncated burnin for testing \n",
+    "        production=500                          # Truncated production for testing \n",
     "    )\n",
     "\n",
-    "    #? So I need to do some editting on this section. \n",
-    "    #? I also need to do some profiling and see if I can't speed things up to fuel my ambition.\n",
+    "    parameters = {  # A dictionary of the model parameters for the `simple_sinusoid`\n",
+    "        \"Start Date (yr)\": None,    # The year that the event began \n",
+    "        \"Duration (yr)\": None,      # Number of years that the event occured over \n",
+    "        \"Phase (yr)\": None,         # The phase shift of the sinusoidal production function \n",
+    "        \"Area\": None                #? What are the units?\n",
+    "    } \n",
     "\n",
-    "    labels = [\"Start Date (yr)\", \"Duration (yr)\", \"$\\phi$ (yr)\", \"Area\"]# Parameters of the model\n",
-    "    c = ChainConsumer().add_chain(sampler, walkers=20, parameters=labels)   # Running samples\n",
-    "\n",
-    "    for parameter in labels:\n",
-    "        c.analysis.get_parameter_summary_max(*c.get_mcmc_chains(), parameter=parameter)"
+    "    for i, parameter in enumerate(parameters):  # Looping through the parameters \n",
+    "        parameters[parameter] = {   # Nested dictionary to store statistical information\n",
+    "            \"mean\": mean(samples[:, i]),    # Storing the mean of the samples produced by mcmc\n",
+    "            \"median\": median(samples[:, i]),# Storing the median in addition to the mean \n",
+    "            \"variance\": var(samples[:, i])  # Storing the variance of the parameter\n",
+    "        }\n",
+    "    \n",
+    "    return parameters"
    ]
   },
   {
@@ -108,7 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def production(t):\n",
+    "#* Naming requires fixing\n",
+    "def production(t, truth):\n",
     "    \"\"\"\n",
     "    The best fit production function as estimated using `mcmc`\n",
     "    \"\"\"\n",
@@ -130,33 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'function' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-cf07875030f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mget_residual_distribution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproduction\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfunction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'function' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "def get_residual_distribution(production, data):\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "guttler_production = get_production_function(\"Guttler14\", \"Miyake12.csv\")"
+    "def get_residual_distribution(production, data: str):\n",
+    "    \"\"\"\n",
+    "    Parameters:\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    return None"
    ]
   },
   {
@@ -178,13 +167,6 @@
    "metadata": {},
    "source": [
     "To minimize the $\\chi^{2}$ statistic I will need to isolate the data before the event and use this to determine the $\\sin$ parameters. This is going to require modifications to the `prod` function and also will require a better understanding of the plotting backend."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It will be easiest to modify the file. It is nice I must say to have got fucking nowhere all day. I'm going to go and pack now after merging these changes on github."
    ]
   }
  ],
