Complete and tested production function

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_units = { # This dictionary contains the units for the fluxes and production function\n",
+    "models = { # This dictionary contains the units for the fluxes and production function\n",
     "    \"Guttler14\": {  # Units of the Guttler 2014 paper\n",
     "        \"production_rate_units\": \"atoms/cm^2/s\",    # Units of the production rate \n",
     "        \"flow_rate_units\": \"Gt/yr\"                  # Units of the fluxes\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,8 @@
     "    \"\"\"\n",
     "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
     "        model,  # Name of the model as looped from the models dictionary \n",
-    "        production_rate_units=model_units[model][\"production_rate_units\"], \n",
-    "        flow_rate_units=model_units[model][\"flow_rate_units\"]\n",
+    "        production_rate_units=models[model][\"production_rate_units\"], \n",
+    "        flow_rate_units=models[model][\"flow_rate_units\"]\n",
     "    )\n",
     "    cbm.compile()   # Generating the transfer operator via the compile() command \n",
     "\n",
@@ -94,7 +94,7 @@
     "        \"Start Date (yr)\": None,    # The year that the event began \n",
     "        \"Duration (yr)\": None,      # Number of years that the event occured over \n",
     "        \"Phase (yr)\": None,         # The phase shift of the sinusoidal production function \n",
-    "        \"Area\": None                #? What are the units?\n",
+    "        \"Area\": None               #? What are the units?\n",
     "    } \n",
     "\n",
     "    for i, parameter in enumerate(parameters):  # Looping through the parameters \n",
@@ -103,27 +103,70 @@
     "            \"median\": median(samples[:, i]),# Storing the median in addition to the mean \n",
     "            \"variance\": var(samples[:, i])  # Storing the variance of the parameter\n",
     "        }\n",
+    "    parameters[\"Steady Production\"] = mcmc_model.steady_state_production   \n",
     "    \n",
     "    return parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running burn-in...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 200/200 [00:17<00:00, 11.59it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running production...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 500/500 [00:44<00:00, 11.19it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = get_production_function(\"Guttler14\", \"Miyake12.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#* Naming requires fixing\n",
-    "def production(t, truth):\n",
+    "def production(t: float):\n",
     "    \"\"\"\n",
     "    The best fit production function as estimated using `mcmc`\n",
     "    \"\"\"\n",
-    "    middle = truth[0] + truth[1] / 2.0\n",
-    "    height = truth[3] / truth[1]\n",
-    "    gauss = height * exp(- ((t - middle) / (1. / 1.93516 * truth[1])) ** 16.)\n",
-    "    sine = mcmc_model.steady_state_production + \\\n",
-    "        0.18 * mcmc_model.steady_state_production * \\\n",
-    "            sin(2 * pi / 11 * t + truth[2])\n",
+    "    middle = params[\"Start Date (yr)\"][\"mean\"] + \\\n",
+    "        params[\"Duration (yr)\"][\"mean\"] / 2.0    # Calculating the center of the event\n",
+    "    height = params[\"Area\"][\"mean\"] / params[\"Duration (yr)\"][\"mean\"] # The magnitude of the event \n",
+    "\n",
+    "    gauss = height * exp(- ((t - middle) / (1. / 1.93516 * \\\n",
+    "        params[\"Duration (yr)\"][\"mean\"])) ** 16.)   # The super-gaussian event\n",
+    "\n",
+    "    sine = params[\"Steady Production\"] + \\\n",
+    "        0.18 * params[\"Steady Production\"] * \\\n",
+    "        sin(2 * pi / 11 * t + params[\"Phase (yr)\"][\"mean\"]) # Sinusoidal component of production \n",
+    "    \n",
     "    return sine + gauss"
    ]
   },
@@ -140,11 +183,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_residual_distribution(production, data: str):\n",
+    "from pandas import read_csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_residual_distribution(production, model:str, data: str):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
-    "        \n",
+    "        production: function - The production function, typically determined using `get_production_function`.\n",
+    "        data: str - The file name of the data. Should be the same as the file name that was provided to `get_production_function`.\n",
+    "    Returns:\n",
+    "        An `mcmc` sample of the posterior distribution of the residuals, which has been fitted with a parameteric (to start) distribution that can be used to simulate noise.\n",
     "    \"\"\"\n",
+    "    #* I need to work out how to include the measurement uncerainty in my parametric fitting\n",
+    "    #* I also need to work out how to test for normaility\n",
+    "    data = read_csv(data, sep=\" \")  # Reading the data into the namespace #! CHECK SEP\n",
+    "\n",
+    "    model = ticktack.load_presaved_model(model, production_rate_units=models[model][\"production_rate_units\"], flow_rate_units=models[model][\"flow_rate_untis\"])\n",
+    "\n",
+    "    years = array([*data[\"year\"]])  # Creating an array to fead into the production function \n",
+    "    residuals = array([*data[\"d14c\"]]) - production(years)  # Calculating the residuals\n",
+    "\n",
     "    return None"
    ]
   },
