Major restructure of model parameter in global namespace

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import ticktack\n",
     "from jax.numpy import array, pi, exp, sin, mean, median, var\n",
+    "from pandas import read_csv\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -19,15 +20,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So I need to have a dictionary to keep track of the units for the different models."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +54,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_production_function(model: str, data: str):\n",
+    "def get_model(model: str):\n",
+    "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
+    "        model,  # Name of the model as looped from the models dictionary \n",
+    "        production_rate_units=models[model][\"production_rate_units\"], \n",
+    "        flow_rate_units=models[model][\"flow_rate_units\"]\n",
+    "    )\n",
+    "    cbm.compile()   # Generating the transfer operator via the compile() command \n",
+    "    mcmc_model.prepare_function(model=\"simple_sinusoid\")# Generating the simple sin model \n",
+    "    mcmc_model = ticktack.fitting.SingleFitter(model)   # Fitting a model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = \"Guttler14\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_production_function(model: ticktack.CarbonBoxModel, data: str):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
     "        model: `str` - The `CarbonBoxModel` that is to be used\n",
@@ -72,20 +92,11 @@
     "    Returns:\n",
     "        production: `function` - The ideal production function \n",
     "    \"\"\"\n",
-    "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
-    "        model,  # Name of the model as looped from the models dictionary \n",
-    "        production_rate_units=models[model][\"production_rate_units\"], \n",
-    "        flow_rate_units=models[model][\"flow_rate_units\"]\n",
-    "    )\n",
-    "    cbm.compile()   # Generating the transfer operator via the compile() command \n",
+    "    model.load_data(data)                          # Loading the data into the model \n",
     "\n",
-    "    mcmc_model = ticktack.fitting.SingleFitter(cbm)     # Fitting a model \n",
-    "    mcmc_model.load_data(data)                          # Loading the data into the model \n",
-    "    mcmc_model.prepare_function(model=\"simple_sinusoid\")# Generating the simple sin model \n",
-    "\n",
-    "    samples = mcmc_model.MarkovChainSampler(    # An array of samples for all of the parameters\n",
+    "    samples = model.MarkovChainSampler(    # An array of samples for all of the parameters\n",
     "        array([775., 1./12, pi/2., 81./12]),    # Initial position within the parameters space    \n",
-    "        likelihood=mcmc_model.log_likelihood,   # likelihood function \n",
+    "        likelihood=model.log_likelihood,   # likelihood function \n",
     "        burnin=200,                             # Truncated burnin for testing \n",
     "        production=500                          # Truncated production for testing \n",
     "    )\n",
@@ -103,14 +114,14 @@
     "            \"median\": median(samples[:, i]),# Storing the median in addition to the mean \n",
     "            \"variance\": var(samples[:, i])  # Storing the variance of the parameter\n",
     "        }\n",
-    "    parameters[\"Steady Production\"] = mcmc_model.steady_state_production   \n",
+    "    parameters[\"Steady Production\"] = model.steady_state_production   \n",
     "    \n",
     "    return parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:17<00:00, 11.59it/s]\n"
+      "100%|██████████| 200/200 [00:17<00:00, 11.29it/s]\n"
      ]
     },
     {
@@ -138,17 +149,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:44<00:00, 11.19it/s]\n"
+      "100%|██████████| 500/500 [00:44<00:00, 11.27it/s]\n"
      ]
     }
    ],
    "source": [
-    "params = get_production_function(\"Guttler14\", \"Miyake12.csv\")"
+    "params = get_production_function(model, \"Miyake12.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,16 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pandas import read_csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_residual_distribution(production, model:str, data: str):\n",
+    "def get_residual_distribution(production, model: ticktack.CarbonBoxModel, data: str):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
     "        production: function - The production function, typically determined using `get_production_function`.\n",
@@ -204,12 +206,30 @@
     "    #* I also need to work out how to test for normaility\n",
     "    data = read_csv(data, sep=\" \")  # Reading the data into the namespace #! CHECK SEP\n",
     "\n",
-    "    model = ticktack.load_presaved_model(model, production_rate_units=models[model][\"production_rate_units\"], flow_rate_units=models[model][\"flow_rate_untis\"])\n",
-    "\n",
     "    years = array([*data[\"year\"]])  # Creating an array to fead into the production function \n",
+    "\n",
+    "    #* Note that the `SingleFitter` object has a method dc14 which may be better used here. In this case I would be passing the 'SingleFitter' oject as the model parameter and not the `CarbonBoxModel`. \n",
+    "    carbon, steady_state = model.run(  # Running the carbon box model over the duration \n",
+    "        time_out=years,         # The sample points of the model \n",
+    "        oversample=48,          # Number of iterations between each sample point \n",
+    "        production=production   # Production function \n",
+    "    )\n",
+    "    \n",
+    "    carbon = model.bin_data(\n",
+    "        carbon,\n",
+    "        \n",
+    "    )\n",
+    "\n",
     "    residuals = array([*data[\"d14c\"]]) - production(years)  # Calculating the residuals\n",
     "\n",
     "    return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So I will restructure the code by creating an instance of the `cbm` in the main namespace. I will then pass this instance into the function where it is needed"
    ]
   },
   {
