Reformatting the return of `get_residual_distribution'

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,27 +64,29 @@
     "        production_rate_units=models[model][\"production_rate_units\"], \n",
     "        flow_rate_units=models[model][\"flow_rate_units\"]\n",
     "    )\n",
-    "    cbm.compile()   # Generating the transfer operator via the compile() command \n",
-    "    mcmc_model.prepare_function(model=\"simple_sinusoid\")# Generating the simple sin model \n",
-    "    mcmc_model = ticktack.fitting.SingleFitter(model)   # Fitting a model "
+    "\n",
+    "    bayesian_model = ticktack.fitting.SingleFitter(model)   # Fitting a model \n",
+    "    bayesian_model.prepare_function(model=\"simple_sinusoid\")# Generating the simple sin model \n",
+    "\n",
+    "    return bayesian_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = \"Guttler14\""
+    "model = get_model(\"Guttler14\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_production_function(model: ticktack.CarbonBoxModel, data: str):\n",
+    "def get_production_function(model: ticktack.fitting.SingleFitter, data: str):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
     "        model: `str` - The `CarbonBoxModel` that is to be used\n",
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +137,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:17<00:00, 11.29it/s]\n"
+      "100%|██████████| 200/200 [00:18<00:00, 11.11it/s]\n"
      ]
     },
     {
@@ -149,7 +151,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:44<00:00, 11.27it/s]\n"
+      "100%|██████████| 500/500 [00:45<00:00, 11.01it/s]\n"
      ]
     }
    ],
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_residual_distribution(production, model: ticktack.CarbonBoxModel, data: str):\n",
+    "def get_residual_distribution(production, model: ticktack.fitting.SingleFitter, data: str):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
     "        production: function - The production function, typically determined using `get_production_function`.\n",
@@ -206,30 +208,60 @@
     "    #* I also need to work out how to test for normaility\n",
     "    data = read_csv(data, sep=\" \")  # Reading the data into the namespace #! CHECK SEP\n",
     "\n",
-    "    years = array([*data[\"year\"]])  # Creating an array to fead into the production function \n",
+    "    model.production = production   # Setting the production function \n",
+    "    residuals = array([*data[\"d14c\"]]) - model.dc14()\n",
     "\n",
-    "    #* Note that the `SingleFitter` object has a method dc14 which may be better used here. In this case I would be passing the 'SingleFitter' oject as the model parameter and not the `CarbonBoxModel`. \n",
-    "    carbon, steady_state = model.run(  # Running the carbon box model over the duration \n",
-    "        time_out=years,         # The sample points of the model \n",
-    "        oversample=48,          # Number of iterations between each sample point \n",
-    "        production=production   # Production function \n",
-    "    )\n",
-    "    \n",
-    "    carbon = model.bin_data(\n",
-    "        carbon,\n",
-    "        \n",
-    "    )\n",
+    "    #* Should look into mae error reporting for the variance and mean\n",
     "\n",
-    "    residuals = array([*data[\"d14c\"]]) - production(years)  # Calculating the residuals\n",
+    "    gaussian_error_parameters = {   # Dictionary containing the parameters of a parametric gaussian\n",
+    "        \"residuals\": {   # The statistical error in the residuals \n",
+    "            \"mean\": mean(residuals),    # The mean of the residuals assumed to have gaussian error\n",
+    "            \"variance\": var(residuals)  # Variance of the residuals assumed to have gaussian error\n",
+    "        },\n",
+    "        \"error\": {  # The statistical distribution of the measurement error\n",
+    "            \"mean\": mean(array([*data[\"sig_d14c\"]])),   # Mean measurement error\n",
+    "            \"variance\": var(array([*data[\"sig_d14c\"]])) # Variance of measurement error \n",
+    "        }\n",
+    "    }\n",
     "\n",
-    "    return None"
+    "    return gaussian_error_parameters\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gaussian_error = get_residual_distribution(production, model, \"Miyake12.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So I will restructure the code by creating an instance of the `cbm` in the main namespace. I will then pass this instance into the function where it is needed"
+    "So the error in the data measurements will have a distribution that I can use to generate imaginary error in the data. I'm not sure how this will help but it could change the way things shape out so I will implement this and keep track of it. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_params = params.copy()    # Copying the parameters dictionary \n",
+    "event_params[\"Duration (yr)\"][\"mean\"] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_event(model: ticktack.fitting.SingleFitter, error: dict, params: dict):\n",
+    "    core_data_stream = model.dc14()\n"
    ]
   },
   {
